canvas spacing fix

--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ ol {
   flex: 0 0 50%;
   max-height: 100vh;
   overflow-y: auto;
-  padding: 10vh 6em 10vh 4em;
+  padding: 10vh 6em 10vh 0;
   border-left: 2px solid rgba(169, 186, 164, 0.2);
 }
 
@@ -117,6 +117,7 @@ ol {
 
 #contexts {
   z-index: 1;
+  padding-left: 4em;
 }
 
 #artifact-list {
@@ -225,10 +226,18 @@ a {
   .drop {
     margin: 2em 0;
   }
+
+  #context-pane {
+    padding-left: 0;
+  }
 }
 
 @media all and (max-width: 1200px) {
-  #main-content, #context-pane {
+  #main-content {
     padding: 0 2em;
+  }
+
+  #contexts {
+    padding-left: 2em;
   }
 }
